--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <title>JHC Productions - Coming Soon...</title>
+  <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
-<h1>JHC PRODUCTIONS</h1>
+<h1 align=center>JHC PRODUCTIONS</h1>
 <p>Welcome to JHC Productions!<br  />We're working on this site right now. Come back later!</p>
 </body>
 </html>
