--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
-<h1 align=center>JHC PRODUCTIONS</h1>
+<h1 align="center">JHC PRODUCTIONS</h1>
 <p>Welcome to JHC Productions!<br  />We're working on this site right now. Come back later!</p>
 </body>
 </html>
