--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
+  <span id="banner"
 <h1 align="center">JHC PRODUCTIONS</h1>
+  </span>
 <p>Welcome to JHC Productions!<br  />We're working on this site right now. Come back later!</p>
 </body>
 </html>
