--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 <title>JHC Productions - Coming Soon...</title>
   <link rel="stylesheet" href="index.css" type="text/css">
 </head>
+  <ul id="nav">
+  <li><a href="index.html">Home</a></li>
+    <li><a href="cast.html">Cast</a></li>
+  <li><a href="news.html">News</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="about.html">About</a></li>
+</ul> 
 <body>
-  <span id="banner"
+  <span id="banner">
 <h1 align="center">JHC PRODUCTIONS</h1>
   </span>
 <p>Welcome to JHC Productions!<br  />We're working on this site right now. Come back later!</p>
