--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <link rel="stylesheet" href="index.css" type="text/css">
 </head>
   <ul id="nav">
-  <li><a href="index.html">Home</a></li>
-    <li><a href="cast.html">Cast</a></li>
-  <li><a href="news.html">News</a></li>
-  <li><a href="contact.html">Contact</a></li>
-  <li><a href="about.html">About</a></li>
+  <li id="navi"><a href="index.html" class="active">Home</a></li>
+  <li id="navi"><a href="cast.html">Cast</a></li>
+  <li id="navi"><a href="news.html">News</a></li>
+  <li id="navi"><a href="contact.html">Contact</a></li>
+  <li id="navi"><a href="about.html">About</a></li>
 </ul> 
 <body>
   <span id="banner">
