--- a/404.html
+++ b/404.html
@@ -12,9 +12,7 @@
   <li id="navi"><a href="about.html">About</a></li>
 </ul> 
 <body>
-  <span id="banner">
-<h1 align="center">OOPS!</h1>
-  </span>
+<h1 id="banner" align="center">OOPS!</h1>
 <p>It looks like you've run into a 404 error! That means that the page you're looking for is missing or doesn't exist.<br  />We're sorry for the inconvenience!<br  /><a href="index.html">Go home</a></p>
 </body>
 </html>
