--- a/cast.html
+++ b/cast.html
@@ -12,9 +12,7 @@
   <li id="navi"><a href="about.html">About</a></li>
 </ul> 
 <body>
-  <span id="banner">
-<h1 align="center">Our Cast</h1>
-  </span>
+<h1 id="banner" align="center">Our Cast</h1>
 <p>We're currently working on our website. Stay tuned for updates to this page!</p>
 </body>
 </html>
