--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,7 @@
   <li id="navi"><a href="about.html">About</a></li>
 </ul> 
 <body>
-  <span id="banner">
-<h1 align="center">Contact Us</h1>
-  </span>
+<h1 id="banner" align="center">Contact Us</h1>
 <p>You can contact us on Discord or via email.</p>
 <iframe src="https://discordapp.com/widget?id=586355176701558814&amp;theme=dark" allowtransparency="true" width="350" height="500" frameborder="0"></iframe>
 </body>
