--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <li id="navi"><a href="about.html">About</a></li>
 </ul> 
 <body>
-  <span id="banner">
-<h1 align="center">JHC PRODUCTIONS</h1>
-  </span>
+<h1 id="banner" align="center">JHC PRODUCTIONS</h1>
 <p>Welcome to JHC Productions!<br  />We're working on this site right now. Come back later!</p>
 </body>
 </html>
