--- a/news.html
+++ b/news.html
@@ -12,9 +12,7 @@
   <li id="navi"><a href="about.html">About</a></li>
 </ul> 
 <body>
-  <span id="banner">
-<h1 align="center">JHC News</h1>
-  </span>
+<h1 id="banner" align="center">JHC News</h1>
 <p>No news right now :(</p>
 </body>
 </html>
