--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,6 @@
 </ul> 
 <body>
 <h1 id="banner" align="center">Contact Us</h1>
-<p>You can contact us on Discord or via email.</p>
-<iframe src="https://discordapp.com/widget?id=586355176701558814&amp;theme=dark" allowtransparency="true" width="350" height="500" frameborder="0"></iframe>
+  <p>You can contact us via <a href="mailto:jhcproductions@protonmail.com">email</a>.<br  />Our email address is<a href="mailto:jhcproductions@protonmail.com">jhcproductions@protonmail.com</a></p>
 </body>
 </html>
