--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>JHC Productions - Coming Soon...</title>
+  <meta name="yandex-verification" content="de96d76402ed8a01" />
   <link rel="stylesheet" href="index.css" type="text/css">
 </head>
   <ul id="nav">
