--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,6 @@
 <body>
 <h1 id="banner" align="center">Contact Us</h1>
   <p>You can contact us via <a href="mailto:jhcproductions@protonmail.com">email</a>.<br  />Our email address is <a href="mailto:jhcproductions@protonmail.com">jhcproductions@protonmail.com</a></p>
+  <p><br  />Sooner or later, we may transition to our own domain email addresses. Please keep in mind that the protonmail address may soon be invalid.</p>
 </body>
 </html>
