--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 </ul> 
 <body>
 <h1 id="banner" align="center">About us</h1>
-<p>We're currently working on our website. Stay tuned for updates to this page!</p>
+<p>JHC Productions is currently an animated film company, founded by CEO/Founder Jolly Hosmer-Cope and Co-Created by Sam Hansen.<br  />We haven't made any shows or films yet, but we are working on some right now.<br  />Our company currently does not pay employees as we have not made any money, so we hold a volunteer program. If you would like to volunteer please contact <a href="mailto:jolly@jhcproductions.tk">jolly@jhcproductions.tk</a>, or ask for available spots at <a href="mailto:careers@jhcproductions.tk">careers@jhcprooductions.tk</a>JHC Productions is currently an animated film company, founded by CEO/Founder Jolly Hosmer-Cope and Co-Created by Sam Hansen. We haven't made any shows but we are working on some right now. Our company currently does not pay employees as we have not made any money so we hold a volunteer program. If you would like to volunteer please contact jolly@jhcproductions.tk. If you want to know anymore about our company please contact all@jhcproductions.tk.
+That's for "About Us".<br  />If you want to know anymore about our company please contact all@jhcproductions.tk.</p>
 </body>
 </html>
