--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,25 @@
 </ul> 
 <body>
 <h1 id="banner" align="center">Contact Us</h1>
-  <p>You can contact us via <a href="mailto:jhcproductions@protonmail.com">email</a>.<br  />Our email address is <a href="mailto:jhcproductions@protonmail.com">jhcproductions@protonmail.com</a></p>
-  <p><br  />Sooner or later, we may transition to our own domain email addresses. Please keep in mind that the protonmail address may soon be invalid.</p>
+  <p>You can contact us <a href="mailto:all@jhcproductions.tk">directly</a>, or contact our employees or teams.<br  /></p>
+  <p>Current overall email:<a href="mailto:all@jhcproductions.tk">all@jhcproductions.tk</a><br  />
+  Contact Us Team: <a href="mailto:contact@jhcproductions.tk">contact@jhcproductions.tk</a><br  />
+  Editing Team: <a href="mailto:editing@jhcproductions.tk">editing@jhcproductions.tk</a><br  />
+  Animation Team: <a href="mailto:animation@jhcproductions.tk">animation@jhcproductions.tk</a><br  />
+  Acting/voiceacting Team: <a href="mailto:actors@jhcproductions.tk">actors@jhcproductions.tk</a><br  />
+  Careers Team: <a href="mailto:careers@jhcproductions.tk">careers@jhcproductions.tk</a><br  /></p>
+  
+  <p><br  />
+    <strong>Employees</strong>
+  Jolly Hosmer-Cope: CEO and Founder of JHC Productions. <a href="mailto:jolly@jhcproductions.tk">jolly@jhcproductions.tk</a><br  />
+  Sam Hansen: Voice Actor and Editor. <a href="mailto:sam@jhcproductions.tk">sam@jhcproductions.tk</a><br  />
+  Abby Elise: Head of Voice Acting. <a href="mailto:abby@jhcproductions.tk">abby@jhcproductions.tk</a><br  />
+  Christopher Stafford: Head of Editing and IT. <a href="mailto:christopher@jhcproductions.tk">christopher@jhcproductions.tk</a><br  />
+    
+  <br  /><br  />
+  
+    <strong>OB Associates</strong>
+  Addison Cavin
+  </p>
 </body>
 </html>
