--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   Careers Team: <a href="mailto:careers@jhcproductions.tk">careers@jhcproductions.tk</a><br  /></p>
   
   <p><br  />
-    <strong>Employees</strong>
+    <strong>Employees</strong><br  />
   Jolly Hosmer-Cope: CEO and Founder of JHC Productions. <a href="mailto:jolly@jhcproductions.tk">jolly@jhcproductions.tk</a><br  />
   Sam Hansen: Voice Actor and Editor. <a href="mailto:sam@jhcproductions.tk">sam@jhcproductions.tk</a><br  />
   Abby Elise: Head of Voice Acting. <a href="mailto:abby@jhcproductions.tk">abby@jhcproductions.tk</a><br  />
@@ -30,7 +30,7 @@
     
   <br  /><br  />
   
-    <strong>OB Associates</strong>
+    <strong>OB Associates</strong><br  />
   Addison Cavin
   </p>
 </body>
